@@ -16,17 +16,22 @@
 
 package com.sun.mail.imap;
 
-import jakarta.mail.util.ASCIIUtility;
-import jakarta.mail.util.BASE64DecoderStream;
-import jakarta.mail.util.BASE64EncoderStream;
-
 import java.io.IOException;
-import java.util.StringTokenizer;
-import java.util.logging.Logger;
+import java.util.Base64;
 import java.util.logging.Level;
 
-import javax.security.sasl.*;
-import javax.security.auth.callback.*;
+import javax.security.auth.callback.Callback;
+import javax.security.auth.callback.CallbackHandler;
+import javax.security.auth.callback.NameCallback;
+import javax.security.auth.callback.PasswordCallback;
+import javax.security.sasl.AuthorizeCallback;
+import javax.security.sasl.RealmCallback;
+import javax.security.sasl.RealmChoiceCallback;
+import javax.security.sasl.Sasl;
+import javax.security.sasl.SaslException;
+import javax.security.sasl.SaslServer;
+
+import com.sun.mail.util.ASCIIUtility;
 
 /**
  * Handle IMAP connection with SASL authentication.
@@ -123,7 +128,7 @@ public class IMAPSaslHandler extends IMAPHandler {
 		    if (LOGGER.isLoggable(Level.FINE))
 			LOGGER.fine("SASL challenge: " +
 			    ASCIIUtility.toString(chal, 0, chal.length));
-		    byte[] ba = BASE64EncoderStream.encode(chal);
+		    byte[] ba = Base64.getEncoder().encode(chal);
 		    if (ba.length > 0)
 			cont(ASCIIUtility.toString(ba, 0, ba.length));
 		    else
@@ -131,7 +136,7 @@ public class IMAPSaslHandler extends IMAPHandler {
 		    // read response
 		    String resp = readLine();
 		    response = resp.getBytes();
-		    response = BASE64DecoderStream.decode(response);
+		    response = Base64.getDecoder().decode(response);
 		}
 	    } catch (SaslException ex) {
 		no(ex.toString());
