@@ -16,21 +16,21 @@
 
 package com.sun.mail.util;
 
-import jakarta.mail.util.BASE64DecoderStream;
-
 import java.io.IOException;
 import java.net.Socket;
-import java.util.Properties;
 import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+import java.util.Properties;
 
-import com.sun.mail.test.TestServer;
 import com.sun.mail.test.ProtocolHandler;
+import com.sun.mail.test.TestServer;
 
-import org.junit.Test;
 import org.junit.Rule;
+import org.junit.Test;
 import org.junit.rules.Timeout;
-import static org.junit.Assert.assertTrue;
+
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 /**
@@ -189,7 +189,7 @@ public final class SocketFetcherTest {
 		if (line.startsWith("Proxy-Authorization:")) {
 		    int i = line.indexOf("Basic ") + 6;
 		    String up = line.substring(i);
-		    userPassword = new String(BASE64DecoderStream.decode(
+		    userPassword = new String(Base64.getDecoder().decode(
 				    up.getBytes(StandardCharsets.US_ASCII)),
 				    StandardCharsets.UTF_8);
 		}
